# opengl_game

2D_airplane_shooting_game/: CMakeLists.txt  CMakeSettings.json  reademe.txt
2D_airplane_shooting_game/glad/include/glad/: glad.h
2D_airplane_shooting_game/glad/src/: glad.c
2D_airplane_shooting_game/res/shader/: hero_b_1.fs  hero_b_1.vs
2D_airplane_shooting_game/src/: const_def.h  game_context.cpp  game_context.h  joystick.cpp  joystick.h  main.cpp  plane.cpp  plane.h  plane_factory.cpp  plane_factory.h  setting.cpp  setting.h
2D_airplane_shooting_game/src/common/: common.h  time_util.cpp  time_util.h
2D_airplane_shooting_game/src/element/: background.cpp  background.h  element_factory.cpp  element_factory.h  enemy_plane.cpp  enemy_plane.h  main_plane.cpp  main_plane.h  missile.cpp  missile.h  object.cpp  object.h  plane.cpp  plane.h
2D_airplane_shooting_game/src/learnopengl/: shader_s.h
2D_airplane_shooting_game/网络素材/images/bg/: Thumbs.db
2D_airplane_shooting_game/网络素材/images/boom/: Thumbs.db
2D_airplane_shooting_game/网络素材/images/bullet/: Thumbs.db
2D_airplane_shooting_game/网络素材/images/enemy/: Thumbs.db
2D_airplane_shooting_game/网络素材/images/hero/: Thumbs.db
